--- a/assets/css/prescription.scss
+++ b/assets/css/prescription.scss
@@ -179,3 +179,11 @@
         }
      }
 
+
+    @media only screen and (max-width: 991px) and (min-width: 769px) 
+     {
+
+        
+      
+     }
+
